[package]
name = "riscv"
version = "0.1.1"
authors = ["tonnylyz <lyztonny@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tock-registers]
version = "0.7.0"
default-features = false
features = ["register_types"]